--- a/Site_Honkai/caminhos/abundancia.html
+++ b/Site_Honkai/caminhos/abundancia.html
@@ -109,7 +109,32 @@ Yaoshi é um Aeon que responde a todas as orações e não suporta ver a morte e
 
 
     <div class="description">
-      <i><a href="/Site_Honkai/site.html">Voltar</a></i>
+      <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" >Selecione para onde deseja voltar</a></font></font></i>
+          <ul>
+              <li>
+                  <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
+              </li>
+          </ul>
+      </div>
+  </div>
     </div>
 
     <table class="article-table sortable jquery-tablesorter">
