--- a/Site_Honkai/personagens/Pom_Pom.html
+++ b/Site_Honkai/personagens/Pom_Pom.html
@@ -24,7 +24,7 @@
     </div>
     <img alt="Conversa de Diálogo de Ícones" src="/Site_Honkai/Art_Icon/Icon_Dialogue_Talk.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Icon Dialogue Talk.png" data-image-key="Icon_Dialogue_Talk.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/71/Icon_Dialogue_Talk.png/revision/latest/scale-to-width-down/20?cb=20230505230600" class=" ls-is-cached lazyloaded">
     <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sobre </font></font>
-    <a href="/wiki/Dan_Heng" title="Dan Heng"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Dan Heng</font></font></a>   
+    <a href="/Site_Honkai/personagens/dan_heng.html" title="Dan Heng"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Dan Heng</font></font></a>   
     <font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> :Sono.
     </font></font>
     <dl><dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> O passageiro Dan Heng dorme nos arquivos. </font><font style="vertical-align: inherit;">Mas não sei como ele consegue ter uma boa noite de sono naquele quarto. </font><font style="vertical-align: inherit;">Eu estava sempre preocupada que ele pegasse um resfriado.</font></font></dd>
@@ -32,7 +32,7 @@
         <dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Ele também disse algo sobre poder dormir na corda. </font><font style="vertical-align: inherit;">Pom-Pom não</font></font></a></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> sabe o que ele quis dizer com isso, parece muito estranho se você me perguntar...</font></font></dd></dl>
         <img alt="Conversa de Diálogo de Ícones" src="/Site_Honkai/Art_Icon/Icon_Dialogue_Talk.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Icon Dialogue Talk.png" data-image-key="Icon_Dialogue_Talk.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/71/Icon_Dialogue_Talk.png/revision/latest/scale-to-width-down/20?cb=20230505230600" class=" ls-is-cached lazyloaded">
         <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sobre </font></font>
-        <a href="/wiki/Dan_Heng" title="Dan Heng"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Dan Heng</font></font></a>   
+        <a href="/Site_Honkai/personagens/dan_heng.html" title="Dan Heng"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Dan Heng</font></font></a>   
         <font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> :Café da Himeko.
         </font></font>
         <dl><dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Uma das coisas que Pom-Pom admira em Dan Heng é que ele pode realmente beber o café de Himeko. </font><font style="vertical-align: inherit;">Ele até a elogiou algumas vezes.</font></font></dd>
@@ -40,7 +40,7 @@
             <dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> ...De qualquer forma, por favor, não mencione nada disso para Himeko. </font><font style="vertical-align: inherit;">Como navegadora do Expresso, ela faz muito trabalho que passa despercebido, então Pom-Pom tenta não ser muito duro com ela.</font></font></dd></dl>
             <img alt="Conversa de Diálogo de Ícones" src="/Site_Honkai/Art_Icon/Icon_Dialogue_Talk.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Icon Dialogue Talk.png" data-image-key="Icon_Dialogue_Talk.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/71/Icon_Dialogue_Talk.png/revision/latest/scale-to-width-down/20?cb=20230505230600" class=" ls-is-cached lazyloaded">
             <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sobre </font></font>
-            <a href="/wiki/Himeko" title="Himeko"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Himeko</font></font></a>   
+            <a href="/Site_Honkai/personagens/himeko.html" title="Himeko"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Himeko</font></font></a>   
             <font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> :café misturado à mão de Himeko.
             </font></font>
             <dl><dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Himeko é altamente competente quando se trata de consertar as coisas, mas ela está sempre bombeando esse "café misturado à mão" sem inspiração. </font><font style="vertical-align: inherit;">Pom-Pom simplesmente não entende.</font></font></dd>
@@ -48,7 +48,7 @@
             <dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Antigamente, ela usava apenas pó de café solúvel. </font><font style="vertical-align: inherit;">A quantidade de pó que ela usou deu um novo significado à frase "lodo preto".</font></font></dd></dl>
             <img alt="Conversa de Diálogo de Ícones" src="/Site_Honkai/Art_Icon/Icon_Dialogue_Talk.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Icon Dialogue Talk.png" data-image-key="Icon_Dialogue_Talk.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/71/Icon_Dialogue_Talk.png/revision/latest/scale-to-width-down/20?cb=20230505230600" class=" ls-is-cached lazyloaded">
             <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sobre </font></font>
-            <a href="/wiki/March_7th" title="7 de Março"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">7 de Março</font></font></a>   
+            <a href="/Site_Honkai/personagens/marco.html" title="7 de Março"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">7 de Março</font></font></a>   
             <font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> :as orelhas de Pom-Pom
             </font></font>
             <dl><dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> De todos os passageiros do Expresso, 7 de Março me causa mais dor de cabeça. </font><font style="vertical-align: inherit;">Ela sempre quer amarrar minhas orelhas em laços...</font></font></dd>
@@ -56,7 +56,7 @@
             </font></font>
             <img alt="Conversa de Diálogo de Ícones" src="/Site_Honkai/Art_Icon/Icon_Dialogue_Talk.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Icon Dialogue Talk.png" data-image-key="Icon_Dialogue_Talk.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/71/Icon_Dialogue_Talk.png/revision/latest/scale-to-width-down/20?cb=20230505230600" class=" ls-is-cached lazyloaded">
                 <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sobre </font></font>
-            <a href="/wiki/March_7th" title="7 de Março"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">7 de Março</font></font></a>   
+            <a href="/Site_Honkai/personagens/marco.html" title="7 de Março"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">7 de Março</font></font></a>   
             <font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> :conhecedor de sucos.
             </font></font>
             <dl><dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Como condutor do Expresso, é naturalmente meu dever fornecer um serviço de primeira classe a todos os passageiros.</font></font></dd>
@@ -64,14 +64,14 @@
                 <dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Março diz que não parece ser especial quanto ao gosto. </font><font style="vertical-align: inherit;">Desde que seja suco, ela vai gostar.</font></font></dd></dl>
                 <img alt="Conversa de Diálogo de Ícones" src="/Site_Honkai/Art_Icon/Icon_Dialogue_Talk.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Icon Dialogue Talk.png" data-image-key="Icon_Dialogue_Talk.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/71/Icon_Dialogue_Talk.png/revision/latest/scale-to-width-down/20?cb=20230505230600" class=" ls-is-cached lazyloaded">
                 <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sobre </font></font>
-            <a href="/wiki/March_7th" title="7 de Março"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">7 de Março</font></font></a>   
+            <a href="/Site_Honkai/personagens/marco.html" title="7 de Março"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">7 de Março</font></font></a>   
             <font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> :coração de uma jovem.
             </font></font>
             <dl><dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Não pense que a Março está correndo e conversando o dia todo só porque ela tem companhia. </font><font style="vertical-align: inherit;">Mesmo quando está sozinha, ela inicia uma conversa consigo mesma.</font></font></dd>
                 <dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Março parece se acalmar de repente sempre que ela está organizando álbuns de fotos ou escrevendo em seu diário. </font><font style="vertical-align: inherit;">Às vezes, Pom-Pom a vê olhando pela janela. </font><font style="vertical-align: inherit;">Pom-Pom se pergunta o que ela está pensando.</font></font></dd></dl>
                 <img alt="Conversa de Diálogo de Ícones" src="/Site_Honkai/Art_Icon/Icon_Dialogue_Talk.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Icon Dialogue Talk.png" data-image-key="Icon_Dialogue_Talk.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/71/Icon_Dialogue_Talk.png/revision/latest/scale-to-width-down/20?cb=20230505230600" class=" ls-is-cached lazyloaded">
             <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sobre </font></font>
-            <a href="/wiki/Welt" title="Welt"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Welt Yang</font></font></a>   
+            <a href="/Site_Honkai/personagens/welt.html" title="Welt"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Welt Yang</font></font></a>   
             <font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> :Um passado embaraçoso.
             </font></font>
             <dl><dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Welt... Welt é um homem que parece ter passado por muita coisa. </font><font style="vertical-align: inherit;">Ele é calmo e composto, embora Pom-Pom o tenha visto perder a calma em raras ocasiões.</font></font></dd>
@@ -80,7 +80,7 @@
                 <dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Mas Pom-Pom não se lembra do Expresso precisando de nenhum tipo de conserto na época...</font></font></dd></dl>
                 <img alt="Conversa de Diálogo de Ícones" src="/Site_Honkai/Art_Icon/Icon_Dialogue_Talk.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Icon Dialogue Talk.png" data-image-key="Icon_Dialogue_Talk.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/71/Icon_Dialogue_Talk.png/revision/latest/scale-to-width-down/20?cb=20230505230600" class=" ls-is-cached lazyloaded">
                 <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sobre </font></font>
-                <a href="/wiki/Welt" title="Welt"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Welt Yang</font></font></a>   
+                <a href="/Site_Honkai/personagens/welt.html" title="Welt"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Welt Yang</font></font></a>   
                 <font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> :história de dormir.
                 </font></font>
                 <dl><dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Welt costumava ser animador e parece ter muito orgulho de seu trabalho. </font><font style="vertical-align: inherit;">Sempre que as coisas ficavam lentas e todos tinham algum tempo de inatividade, Welt usava sua habilidade de "mimetismo" para retransmitir seu programa para todos.</font></font></dd>
@@ -109,6 +109,31 @@
                             <dl><dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Existem diferentes quartos no Express, então naturalmente também existem diferentes instalações.</font></font></dd>
                                 <dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Claro que o Expresso tem coisas como banheiros, mas quando todos os passageiros exageram nas bebidas do food truck, eles têm que esperar na fila para usá-los.</font></font></dd>
                                 <dd><b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom:</font></font></b><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> E... por que todo mundo sempre deixa o celular na bancada do banheiro? </font><font style="vertical-align: inherit;">É tão estranho, estou sempre encontrando os telefones das pessoas lá.</font></font></dd></dl>
+                                <div class="description">
+                                    <ul>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
+                                        </li>
+                                    </ul>
+                                </div>
         </div>
 </body>
 </html>
